--- a/frontend/src/app/master/confirm-order/confirm-order.component.scss
+++ b/frontend/src/app/master/confirm-order/confirm-order.component.scss
@@ -4,27 +4,39 @@
   @include card();
   width: 1059px;
   height: 730px;
-  padding: 46px 76px;
+  padding: 38px 76px;
+  display: flex;
+  justify-content: space-between;
 
-  &__actions {
-    margin-top: 120px;
+  &__form {
     display: flex;
+    width: 60%;
+    flex-direction: column;
     justify-content: space-between;
-    align-items: center;
 
-    button {
-      width: 100px;
-      height: 35px;
+    .comment {
+      height: 65px;
     }
 
-    .price {
-      label {
-        margin-right: 10px;
+    &__actions {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      button {
+        width: 100px;
+        height: 35px;
       }
 
-      input {
-        @include input();
-        width: 80px;
+      .price {
+        label {
+          margin-right: 10px;
+        }
+
+        input {
+          @include input();
+          width: 80px;
+        }
       }
     }
   }
