--- a/frontend/src/app/client/order/order.component.html
+++ b/frontend/src/app/client/order/order.component.html
@@ -83,6 +83,10 @@
     </div>
   </div>
 
+  <div *ngIf="showComment" class="client-order__comment">
+    <app-comment></app-comment>
+  </div>
+
   <div *ngIf="showPayForm" class="client-order__pay">
     <app-pay-form></app-pay-form>
   </div>
