--- a/frontend/src/app/employee/my-order/my-order.component.scss
+++ b/frontend/src/app/employee/my-order/my-order.component.scss
@@ -6,9 +6,11 @@
   height: 730px;
   padding: 46px 76px;
 
-  &__description {
-    width: 200px;
-    margin-left: 24px;
+  &__form {
+    display: flex;
+    width: 75%;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
   &__actions {
@@ -20,6 +22,5 @@
       width: 100px;
       height: 35px;
     }
-
   }
 }
