--- a/frontend/src/app/client/order/comment/comment.component.scss
+++ b/frontend/src/app/client/order/comment/comment.component.scss
@@ -7,5 +7,13 @@
 
   label {
     font-weight: 300;
+    margin-bottom: 10px;
+    opacity: .8;
+  }
+
+  &__text {
+    margin-left: 4px;
+    word-break: break-word;
+    font-size: 16px;
   }
 }
