--- a/frontend/src/app/client/order/item-location/item-location.component.scss
+++ b/frontend/src/app/client/order/item-location/item-location.component.scss
@@ -7,11 +7,13 @@
 
   label {
     font-weight: 300;
+    opacity: .8;
+    margin-bottom: 10px;
   }
 
   &__place {
-    margin-top: 8px;
-    margin-left: 12px;
+    margin-left: 4px;
     word-break: break-word;
+    font-size: 16px;
   }
 }
