--- a/frontend/src/app/employee/available-order/available-order.component.html
+++ b/frontend/src/app/employee/available-order/available-order.component.html
@@ -1,8 +1,10 @@
 <div class="available-order" [class.loading]="loading">
-  <app-order-info [order]="order$ | async">
+  <ng-container *ngIf="(order$ | async) as order">
+    <app-order-info [order]="order"></app-order-info>
+
     <div class="available-order__control actions">
       <button (click)="close()">Close</button>
       <button class="assign" (click)="assignToMe()">Assign to me</button>
     </div>
-  </app-order-info>
+  </ng-container>
 </div>
