--- a/frontend/src/app/employee/employee.component.html
+++ b/frontend/src/app/employee/employee.component.html
@@ -1,3 +1,5 @@
 <app-toolbar class="toolbar"></app-toolbar>
 
-<router-outlet></router-outlet>
+<div class="employee">
+  <router-outlet></router-outlet>
+</div>
