--- a/frontend/src/app/employee/my-order/my-order.component.html
+++ b/frontend/src/app/employee/my-order/my-order.component.html
@@ -1,15 +1,23 @@
 <div class="my-order" [class.loading]="loading">
-  <app-order-info [order]="order$ | async">
-    <form class="my_order__control form-control" [formGroup]="form">
+  <form *ngIf="(order$ | async) as order" class="my-order__form" [formGroup]="orderForm">
+    <app-order-info [order]="order"></app-order-info>
+
+    <div class="form-control">
       <label for="droppoint">Where is the stolen item hidden</label>
       <input type="text" id="droppoint" formControlName="droppoint">
-    </form>
+    </div>
+
+    <div class="form-control">
+      <label for="comment">Comment</label>
+      <input type="text" id="comment" formControlName="comment">
+    </div>
 
     <div class="my-order__actions">
       <button (click)="close()">Close</button>
-      <button (click)="decline()">Decline</button>
-      <button [disabled]="form.invalid"
-              (click)="complete()">Complete</button>
+
+      <button [disabled]="declineDisabled" (click)="decline()">Decline</button>
+
+      <button [disabled]="completeDisabled" (click)="complete()">Complete</button>
     </div>
-  </app-order-info>
+  </form>
 </div>
