--- a/frontend/src/app/client/order/order.component.html
+++ b/frontend/src/app/client/order/order.component.html
@@ -58,6 +58,8 @@
 
       <ng-template ngSwitchCase="DECLINED">
         <button class="cancel" (click)="onCancel()">Close</button>
+
+        <button class="create" (click)="onDelete()">Delete</button>
       </ng-template>
 
       <ng-template ngSwitchCase="APPROVED">
@@ -74,6 +76,8 @@
 
       <ng-template ngSwitchCase="COMPLETED">
         <button class="cancel" (click)="onCancel()">Close</button>
+
+        <button class="create" (click)="onDelete()">Delete</button>
       </ng-template>
 
       <ng-template ngSwitchDefault>
