--- a/frontend/src/app/styles/form.scss
+++ b/frontend/src/app/styles/form.scss
@@ -12,7 +12,11 @@
     color: #cccccc
   }
 
-  input, .mat-select, textarea {
+  .value {
+    margin-top: 8px;
+  }
+
+  input, .mat-select, textarea, .value {
     font-size: 16px;
     height: 30px;
     line-height: 14px;
