Web push notifications: front-end implementation

--- a/frontend/src/app/client/orders/orders.component.html
+++ b/frontend/src/app/client/orders/orders.component.html
@@ -4,19 +4,58 @@
 
     <ng-template #ordersBlock>
       <div class="client-orders__panel">
-        <mat-button-toggle-group [formControl]="filterControl">
+        <mat-button-toggle-group [formControl]="filterControl" style="overflow: visible">
           <mat-button-toggle value="ALL">All</mat-button-toggle>
-          <mat-button-toggle value="COMPLETED">Completed</mat-button-toggle>
-          <mat-button-toggle [value]="['IN_PROGRESS', 'PAYED']">In progress</mat-button-toggle>
-          <mat-button-toggle value="APPROVED">Wait for payment</mat-button-toggle>
-          <mat-button-toggle value="NEED_CHANGES">Need changes</mat-button-toggle>
+
+          <mat-button-toggle value="COMPLETED"
+                             matBadgeColor="warn"
+                             *ngIf="(completedCount$ | async) || -1; let count"
+                             [matBadgeHidden]="count < 1"
+                             [matBadge]="count">Completed</mat-button-toggle>
+
+          <mat-button-toggle [value]="['IN_PROGRESS', 'PAYED']"
+                             matBadgeColor="warn"
+                             *ngIf="(inProgressCount$ | async) || -1; let count"
+                             [matBadgeHidden]="count < 1"
+                             [matBadge]="count">In progress</mat-button-toggle>
+
+          <mat-button-toggle value="APPROVED"
+                             matBadgeColor="warn"
+                             *ngIf="(approvedCount$ | async) || -1; let count"
+                             [matBadgeHidden]="count < 1"
+                             [matBadge]="count">Wait for payment</mat-button-toggle>
+
+          <mat-button-toggle value="NEED_CHANGES"
+                             matBadgeColor="warn"
+                             *ngIf="(needChangesCount$ | async) || -1; let count"
+                             [matBadgeHidden]="count < 1"
+                             [matBadge]="count">Need changes</mat-button-toggle>
+
           <mat-button-toggle value="CREATED">Wait for approve</mat-button-toggle>
-          <mat-button-toggle value="DECLINED">Declined</mat-button-toggle>
+
+          <mat-button-toggle value="DECLINED"
+                             matBadgeColor="warn"
+                             *ngIf="(declinedCount$ | async) || -1; let count"
+                             [matBadgeHidden]="count < 1"
+                             [matBadge]="count">Declined</mat-button-toggle>
         </mat-button-toggle-group>
       </div>
 
-      <app-order-list [orders]="filteredOrders"
-                      (open)="openOrder($event)"></app-order-list>
+      <div *ngIf="orders?.length" class="client-orders__order-list">
+        <ng-container *ngIf="(orderMessages$ | async) || []; let messages">
+          <div *ngFor="let order of filteredOrders" class="client-orders__order-list__order form-control"
+               matBadgeColor="warn"
+               matBadge="!"
+               [matBadgeHidden]="isOrderBudgeHidden(messages, order)">
+            <div class="order-description" (click)="openOrder(order.id)">
+              <span class="order-description__name">Order: {{order.id}}</span>
+              <span class="order-description__date">Date: {{order.startDate ?? ''}}</span>
+              <span class="order-description__status">Status: {{orderStatus(order)}}</span>
+              <div class="order-description__text">Description: {{description(order) ?? ''}}</div>
+            </div>
+          </div>
+        </ng-container>
+      </div>
     </ng-template>
   </ng-container>
 </div>
