--- a/frontend/src/app/master/analytic/average-profit/average-profit.component.html
+++ b/frontend/src/app/master/analytic/average-profit/average-profit.component.html
@@ -1,3 +1,3 @@
-<div class="chart-wrapper">
+<div class="chart-wrapper" *ngIf="options">
   <div echarts theme="dark" [options]="options"></div>
 </div>
