--- a/frontend/src/app/master/analytic/full-profit/full-profit.component.html
+++ b/frontend/src/app/master/analytic/full-profit/full-profit.component.html
@@ -1,3 +1,3 @@
-<div class="chart-wrapper">
+<div *ngIf="options" class="chart-wrapper">
   <div echarts theme="dark" [options]="options"></div>
 </div>
