add student list and employee list front

--- a/frontend/src/app/master/students-for-master/students-for-master.component.scss
+++ b/frontend/src/app/master/students-for-master/students-for-master.component.scss
@@ -1,6 +1,6 @@
 @import "src/app/styles/mixins";
 
-.employees-for-master {
+.students-for-master {
   @include card();
   @include employee-list();
 }
