add mentor id to student

--- a/frontend/src/app/shared/student-list/student-list.component.html
+++ b/frontend/src/app/shared/student-list/student-list.component.html
@@ -3,6 +3,7 @@
     <div class="student-description" (click)="openStudent(student.id)">
       <span class="student-description__id">Student: {{student.id}}</span>
       <span class="student-description__name">Name: {{student.username ?? ''}}</span>
+      <span class="student-description__mentor">Mentor: {{student.mentorId ?? ''}}</span>
     </div>
   </div>
 </div>
