--- a/frontend/src/app/shared/student-list/student-list.component.scss
+++ b/frontend/src/app/shared/student-list/student-list.component.scss
@@ -27,6 +27,11 @@
         left: 140px;
         width: 165px;
       }
+
+      &__mentor {
+        left: 280px;
+        width: 165px;
+      }
     }
   }
 }
