--- a/frontend/src/app/shared/employee-list/employee-list.component.html
+++ b/frontend/src/app/shared/employee-list/employee-list.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="employees?.length" class="employee-list">
   <div *ngFor="let employee of employees" class="employee-list__employee form-control">
-    <div class="employee-description" (click)="openEmployee(employee.id)">
+    <div class="employee-description">
       <span class="employee-description__id">Employee: {{employee.id}}</span>
       <span class="employee-description__name">Name: {{employee.username ?? ''}}</span>
     </div>
