--- a/frontend/src/app/shared/student-list/student-list.component.html
+++ b/frontend/src/app/shared/student-list/student-list.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="students?.length" class="student-list">
   <div *ngFor="let student of students" class="student-list__student form-control">
-    <div class="student-description" (click)="openStudent(student.id)">
+    <div class="student-description">
       <span class="student-description__id">Student: {{student.id}}</span>
       <span class="student-description__name">Name: {{student.username ?? ''}}</span>
       <span class="student-description__mentor">Mentor: {{student.mentorId ?? ''}}</span>
