add employee creating form ofr master

--- a/frontend/src/app/shared/student-list/student-list.component.html
+++ b/frontend/src/app/shared/student-list/student-list.component.html
@@ -3,7 +3,7 @@
     <div class="student-description">
       <span class="student-description__id">Student: {{student.id}}</span>
       <span class="student-description__name">Name: {{student.username ?? ''}}</span>
-      <span class="student-description__mentor">Mentor: {{student.mentorId ?? ''}}</span>
+      <span class="student-description__mentor">Mentor: {{student.mentor.username ?? ''}}</span>
     </div>
   </div>
 </div>
