add assignement to student for employee

--- a/frontend/src/app/employee/available-order/available-order.component.scss
+++ b/frontend/src/app/employee/available-order/available-order.component.scss
@@ -22,6 +22,10 @@
       height: 160px;
       width: 680px;
 
+      .student {
+        width: 200px;
+      }
+
       button {
         width: 80px;
         height: 35px;
