--- a/frontend/src/app/employee/available-order/available-order.component.html
+++ b/frontend/src/app/employee/available-order/available-order.component.html
@@ -5,6 +5,18 @@
     <div class="available-order__control actions">
       <button (click)="close()">Close</button>
       <button class="assign" (click)="assignToMe()">Assign to me</button>
+      <button class="assign-student" [disabled]="studentInvalid" (click)="assignToStudent()">Assign to student</button>
+      <div class="student">
+        <label>Student: </label>
+        <mat-select formControlName="assigned-student"
+                    (valueChange)="onStudentAssignedChange($event)"
+                    [ngModel]="assignedStudent"
+                    [disabled]="loading">
+          <mat-option *ngFor="let student of students" [value]="student">
+            {{student.username}}
+          </mat-option>
+        </mat-select>
+      </div>
     </div>
   </ng-container>
 </div>
