--- a/frontend/src/app/employee/available-order/available-order.component.html
+++ b/frontend/src/app/employee/available-order/available-order.component.html
@@ -5,11 +5,11 @@
     <div class="available-order__control actions">
       <button (click)="close()">Close</button>
       <button class="assign" (click)="assignToMe()">Assign to me</button>
-      <button class="assign-student" [disabled]="studentInvalid" (click)="assignToStudent()">Assign to student</button>
+      <button class="assign-student"  [disabled]="studentInvalid" (click)="assignToStudent()">Assign to student</button>
       <div class="student">
         <label>Student: </label>
         <mat-select formControlName="assigned-student"
-                    [ngModel]="assignedStudent"
+                    [(value)]="assignedStudent"
                     [disabled]="loading">
           <mat-option *ngFor="let student of students" [value]="student">
             {{student.username}}
