--- a/frontend/src/app/master/create-employee/create-employee.component.scss
+++ b/frontend/src/app/master/create-employee/create-employee.component.scss
@@ -8,6 +8,10 @@
   display: flex;
   justify-content: space-between;
 
+  &__select-service {
+    width: 180px;
+  }
+
   &__form {
     display: flex;
     width: 50%;
@@ -17,36 +21,21 @@
     margin-left: auto;
     margin-right: auto;
     justify-content: space-between;
+  }
 
-    &__footer {
-      flex: 1;
-      display: flex;
-      align-items: flex-end;
-      justify-content: space-between;
-      margin: 2px 8px;
+  &__actions {
+    margin: 2px 8px;
 
-      button {
-        height: 35px;
+    button {
+      height: 35px;
 
-        &.cancel {
-          width: 95px;
-        }
+      &.cancel {
+        width: 95px;
+      }
 
-        &.create {
-          width: 110px;
-        }
+      &.create {
+        width: 110px;
       }
     }
   }
-
-  &__select-service {
-    width: 180px;
-  }
-}
-
-
-
-.loading {
-  width: 100%;
-  height: 100%;
 }
