--- a/frontend/src/app/master/create-employee/create-employee.component.scss
+++ b/frontend/src/app/master/create-employee/create-employee.component.scss
@@ -6,10 +6,13 @@
   height: 700px;
   padding: 38px 76px;
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: space-between;
 
   &__select-service {
     width: 180px;
+    margin-bottom: 80px;
   }
 
   &__form {
